[package]
name = "npm-registry"
version = "0.1.0"
authors = ["Chris Dickinson <christopher.s.dickinson@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0.11"
anyhow = "1.0.26"
async-trait = "0.1.24"
tide = "0.6.0"
tracing = { version = "0.1.12", features = [ "log" ] }
log = "0.4.8"
simple_logger = "1.5.0"
futures = "0.3.4"
surf = "1.0.3"
serde_json = "1.0.48"
chrono = "0.4.10"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]
